--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-url: https://redseatechies.github.io
-baseurl: /
+# url: https://redseatechies.github.io
+# baseurl: /
 
 # Site settings
 title: Awesome Title
