WIP: pre-launch

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ color:
 people:
 - name: Andrew Yip
   pic: andrew
-  position: Data Painter
+  position: Data Painter of KBus
   social:
     - title: github
       url: yip.redseatechies.org
