WIP: add link to post, fix pics

--- a/_config.yml
+++ b/_config.yml
@@ -9,17 +9,17 @@ description: "code for the better > together"
 # Color settings (hex-codes without the leading hash-tag)
 color:
   primary: fed136
-  secondary: fec503  
+  secondary: fec503
   secondary-dark: 333
 
 # Team names, titles and social links
 people:
 - name: Andrew Yip
-  pic: andrew_fg
+  pic: andrew
   position: KBus
   social:
     - title: github
-      url: github.com/yipcma
+      url: https://github.com/yipcma
 
 # - name: Larry Parker
 #   pic: 2
@@ -48,7 +48,7 @@ social:
   - title: facebook
     url: https://facebook.com/redseatechies
   - title: github
-    url: http://github.com/redseatechies
+    url: https://github.com/redseatechies
 
 # Postal address (add as many lines as necessary)
 address:
