--- a/_config.yml
+++ b/_config.yml
@@ -2,13 +2,13 @@
 # baseurl: /
 
 # Site settings
-title: Red Sea Techies
+title: RED SEA TECHIES
 email: andrew.yip@kaust.edu.sa
 description: "code for the better > together"
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
-  primary: fed136
+  primary: ffff00
   secondary: fec503
   secondary-dark: 333
 
