WIP: add hcd group

--- a/_config.yml
+++ b/_config.yml
@@ -46,7 +46,7 @@ people:
 # Social networks usernames (twitter, facebook, stack-overflow, bitbucket, github, google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
   - title: facebook
-    url: https://facebook.com/redseatechies
+    url: https://www.facebook.com/groups/redseatechies
   - title: github
     url: https://github.com/redseatechies
 
